[package]
name = "mcl-grid"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcl"

[dependencies]
nalgebra = "0.32.3"
octree = { git = "https://github.com/WenqingZong/Octree", branch = "main" }
bvh = "0.7.2"
bvh-arena = "1.1.3"
bno055 = "0.3.3"
pasture-core = "0.4.0"
bytemuck = "1.14.0"
pasture-derive = "0.4.0"
ordered-float = "4.1.1"

